tests/sema/positive/basic_program.nv
fn main() : void {
    let x : int = 1;
    x = x + 1;
    return;
}
