tests/sema/negative/while_condition_not_bool.nv
fn main() : void {
    while (1) {
        return;
    }
    return;
}
